--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'U'
 - !lcsh 'Military education -- Fiction'
 - !lcsh 'New York (State) -- Fiction'
+- GITenberg
 title: At Plattsburg
 url: http://www.gutenberg.org/ebooks/25825
